# ctypes-windows-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _import_all.py  convert_header.py  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: pythonpackage.yml
cwinsdk/: __init__.py  ntdll.py  win32constants.py  win32functions.py  win32structs.py  windows.py  wintypes.py
cwinsdk/km/: ata.py  dderror.py  ntddk.py  ntifs.py  wdm.py
cwinsdk/km/crt/: excpt.py
cwinsdk/shared/: WTypesbase.py  basetsd.py  devioctl.py  devpkey.py  devpropdef.py  diskguid.py  ehstorioctl.py  guiddef.py  minwindef.py  ntdddisk.py  ntddscsi.py  ntddstor.py  ntdef.py  ntstatus.py  nvme.py  scsi.py  secext.py  srb.py  windef.py  winerror.py
cwinsdk/um/: AudioSessionTypes.py  KnownFolders.py  ShlObj_core.py  Unknwn.py  WinBase.py  WinUser.py  audiosessiontypes.py  combaseapi.py  consoleapi.py  consoleapi2.py  fileapi.py  handleapi.py  ioapiset.py  knownfolders.py  libloaderapi.py  lsalookup.py  memoryapi.py  minwinbase.py  ntsecapi.py  processenv.py  processthreadsapi.py  reason.py  securitybaseapi.py  setupapi.py  shtypes.py  synchapi.py  sysinfoapi.py  unknwn.py  wincontypes.py  wingdi.py  winioctl.py  winnt.py  winternl.py
tests/: test_init.py
transpile/: pyproject.toml  transpile.py  utils.py
win32sdk/: win32enums.py  win32functions.py  win32types.py  windows.py
win32sdk/km/: dderror.py
win32sdk/km/crt/: excpt.py
win32sdk/shared/: basetsd.py
win32sdk/um/: WinUser.py  handleapi.py
